// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio Component should handle children as a label: children label radio 1`] = `
<radio
  props="{
  "children": [
    {}
  ],
  "ariaLabel": "radio input",
  "checked": null,
  "className": "",
  "id": null,
  "isChecked": false,
  "isDisabled": false,
  "label": "",
  "name": null
}"
>
  <div
    class="pf-v5-c-radio quipucords-form__radio "
  >
    <input
      aria-invalid="false"
      class="pf-v5-c-radio__input"
      data-ouia-component-id="OUIA-Generated-Radio-5"
      data-ouia-component-type="PF5/Radio"
      data-ouia-safe="true"
      id="generatedid-"
      name="generatedid-"
      type="radio"
      value=""
    />
    <label
      class="pf-v5-c-radio__label"
      for="generatedid-"
    >
      lorem ipsum
    </label>
  </div>
</radio>
`;

exports[`Radio Component should handle disabled, checked: active 1`] = `
<radio
  props="{
  "isDisabled": false,
  "ariaLabel": "radio input",
  "checked": null,
  "children": [],
  "className": "",
  "id": null,
  "isChecked": false,
  "label": "",
  "name": null
}"
>
  <div
    class="pf-v5-c-radio pf-m-standalone quipucords-form__radio "
  >
    <input
      aria-invalid="false"
      aria-label="radio input"
      class="pf-v5-c-radio__input"
      data-ouia-component-id="OUIA-Generated-Radio-3"
      data-ouia-component-type="PF5/Radio"
      data-ouia-safe="true"
      id="generatedid-"
      name="generatedid-"
      type="radio"
      value=""
    />
  </div>
</radio>
`;

exports[`Radio Component should handle disabled, checked: checked 1`] = `
<radio
  props="{
  "isDisabled": false,
  "ariaLabel": "radio input",
  "checked": null,
  "children": [],
  "className": "",
  "id": null,
  "isChecked": true,
  "label": "",
  "name": null
}"
>
  <div
    class="pf-v5-c-radio pf-m-standalone quipucords-form__radio "
  >
    <input
      aria-invalid="false"
      aria-label="radio input"
      checked=""
      class="pf-v5-c-radio__input"
      data-ouia-component-id="OUIA-Generated-Radio-4"
      data-ouia-component-type="PF5/Radio"
      data-ouia-safe="true"
      id="generatedid-"
      name="generatedid-"
      type="radio"
      value=""
    />
  </div>
</radio>
`;

exports[`Radio Component should handle disabled, checked: disabled 1`] = `
<radio
  props="{
  "isDisabled": true,
  "ariaLabel": "radio input",
  "checked": null,
  "children": [],
  "className": "",
  "id": null,
  "isChecked": false,
  "label": "",
  "name": null
}"
>
  <div
    class="pf-v5-c-radio pf-m-standalone quipucords-form__radio "
  >
    <input
      aria-invalid="false"
      aria-label="radio input"
      class="pf-v5-c-radio__input"
      data-ouia-component-id="OUIA-Generated-Radio-2"
      data-ouia-component-type="PF5/Radio"
      data-ouia-safe="true"
      disabled=""
      id="generatedid-"
      name="generatedid-"
      type="radio"
      value=""
    />
  </div>
</radio>
`;

exports[`Radio Component should render a basic component: basic component 1`] = `
<radio
  props="{
  "ariaLabel": "radio input",
  "checked": null,
  "children": [],
  "className": "",
  "id": null,
  "isChecked": false,
  "isDisabled": false,
  "label": "",
  "name": null
}"
>
  <div
    class="pf-v5-c-radio pf-m-standalone quipucords-form__radio "
  >
    <input
      aria-invalid="false"
      aria-label="radio input"
      class="pf-v5-c-radio__input"
      data-ouia-component-id="OUIA-Generated-Radio-1"
      data-ouia-component-type="PF5/Radio"
      data-ouia-safe="true"
      id="generatedid-"
      name="generatedid-"
      type="radio"
      value=""
    />
  </div>
</radio>
`;

exports[`Radio Component should return an emulated onChange event: emulated event 1`] = `
[
  [
    {
      "checked": true,
      "currentTarget": <input
        aria-invalid="false"
        class="pf-v5-c-radio__input"
        data-ouia-component-id="OUIA-Generated-Radio-6"
        data-ouia-component-type="PF5/Radio"
        data-ouia-safe="true"
        id="generatedid-"
        name="generatedid-"
        type="radio"
        value=""
      />,
      "id": "generatedid-",
      "keyCode": undefined,
      "name": "generatedid-",
      "persist": [Function],
      "target": <input
        aria-invalid="false"
        class="pf-v5-c-radio__input"
        data-ouia-component-id="OUIA-Generated-Radio-6"
        data-ouia-component-type="PF5/Radio"
        data-ouia-safe="true"
        id="generatedid-"
        name="generatedid-"
        type="radio"
        value=""
      />,
      "value": undefined,
    },
  ],
]
`;
